...
            />
          );
        }}
        ListFooterComponent={
          <FooterLoadingIndicator isHidden={!hasMoreTopics || !topicsData} />
        }
        testID="Home:PostList"
      />
    );
  };

  const homeContent = () => (
    <>
...
          />
        )}
        <Animated.View style={[styles.header, headerTranslateY]}>
          <SearchBar
            placeholder={t('搜索阁下想看的帖子')}
            onPressSearch={onPressSearch}
            testID="Home:Button:SearchTopic"
          />
          <SegmentedControl
            values={sortOptionsArray}
            labelExtractor={(item: SortOption) => item.label()}
            width={width}
            onItemPress={onSegmentedControlItemPress}
...
