...
    <KeyboardAvoidingView
      style={[styles.flex, isTablet && styles.tabletContainer]}
      contentContainerStyle={styles.container}
      behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
      keyboardVerticalOffset={90}
    >
      <ScrollView ref={scrollViewRef} testID="EditProfile:ScrollView">
        <CustomHeader
          title={isTablet ? t('编辑资料') : ''}
          rightTitle="Save"
          onPressRight={onPressRight}
          noShadow={!isTablet}
          isLoading={editProfileLoading}
          disabled={noChanges || uploadLoading}
          hideHeaderLeft={isTabletLandscape}
        />
...
                    onChange(text);
                  }}
                  onSubmitEditing={() => nameInputRef.current?.focus()}
                  returnKeyType="next"
                  autoCapitalize="none"
                  style={styles.spacingBottom}
                  testID="EditProfile:TextInput:Username"
                />
              )}
            />
            <Controller
              name="name"
              defaultValue={currentUserData.name || ''}
...
