...
            key={state.routes[index].key}
            onPress={onPress}
            style={styles.tab}
            activeOpacity={state.index === index ? 1 : 0.2}
            testID={
              route.name === 'Profile'
                ? 'Tab:Profile'
                : route.name === 'Chat'
                ? 'Tab:Chat'
                : route.name === 'Draft'
                ? 'Tab:Draft'
                : 'Tab:Home'
            }
...
