...
                style={[styles.tabletHeaderItemContainer, styles.marginLeft]}
              >
                <Button
                  content={t('编辑资料')}
                  disabled={!data}
                  onPress={() => navigateInProfile('EditProfile', { user })}
                  testID="Profile:Button:EditProfile"
                />
              </View>
            </View>
          ) : (
            <View style={styles.headerContainer}>
              <Avatar
...
